--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <img src="./images/Icono-Te-ayudamos.svg" />
           <div class="container__text_icons">
             <span class="text_rosadito"> Te ayudamos</span> 
-            <span class="text_metro1_"> darle forma a tu negocio </span>
+            <span class="text_metro1_"> a darle forma a tu negocio </span>
           </div>
         </div>
         <div class="container_icono-tr">
@@ -99,7 +99,7 @@
           <img src="./images/Icono-Damos-soporte.svg" />
           <div class="container__text_icons3">
             <span class="text_rosadito_a"> Damos soporte </span>
-            <span class="text_metro3_">a tu servicios y productos</span>
+            <span class="text_metro3_">a tus servicios y productos</span>
           </div>
         </div>
       </div>
