--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <nav class="menu">
       <label class="logo">maza brand</label>
       <ul class="menu-items">
-        <li><a href="">Inicio</a></li>
-        <li><a href="">Nosotros</a></li>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="nosotros.html">Nosotros</a></li>
         <li><a href="">Contacto</a></li>
         <li><a href="">Servicios</a></li>
         <li><a href="">Blog</a></li>
