--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li><a href="index.html">Inicio</a></li>
         <li><a href="nosotros.html">Nosotros</a></li>
         <li><a href="">Contacto</a></li>
-        <li><a href="">Servicios</a></li>
+        <li><a href="servicios.html">Servicios</a></li>
         <li><a href="">Blog</a></li>
       </ul>
       <span class="btn_menu">
