--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <input type="button" class="btn" value="Quiero saber mas" />
       </div>
       <div class="container_images">
-        <img src="./images/1x.jpg" />
+        <img src="./images/inicio/1x.jpg" />
       </div>
 
       <!-- Home - "Servicios" -->
@@ -76,28 +76,28 @@
         <input type="button" class="btn2" value="Quiero saber mas" />
       </div>
       <div class="container_images2">
-        <img src="images/home-prueba-2.jpg" />
+        <img src="images/inicio/home-prueba-2.jpg" />
       </div>
 
 
       <!-- Home - "Iconos" -->
       <div class="container__icons">
         <div class="container_icono-te">
-          <img src="./images/Icono-Te-ayudamos.svg" />
+          <img src="./images/inicio/Icono-Te-ayudamos.svg" />
           <div class="container__text_icons">
             <span class="text_rosadito"> Te ayudamos</span> 
             <span class="text_metro1_"> a darle forma a tu negocio </span>
           </div>
         </div>
         <div class="container_icono-tr">
-          <img src="./images/Icono-Transformamos.svg" />
+          <img src="./images/inicio/Icono-Transformamos.svg" />
           <div class="container__text_icons2">
             <span class="text_azulito"> Transformamos </span>
             <span class="text_metro2_">tu negocio digitalmente</span>
           </div>
         </div>
         <div class="container_icono-dq">
-          <img src="./images/Icono-Damos-soporte.svg" />
+          <img src="./images/inicio/Icono-Damos-soporte.svg" />
           <div class="container__text_icons3">
             <span class="text_rosadito_a"> Damos soporte </span>
             <span class="text_metro3_">a tus servicios y productos</span>
@@ -119,7 +119,7 @@
         <input type="button" class="btn_seccion3" value="Quiero saber mas" />
       </div>
       <div class="container_images_seccion3">
-        <img src="./images/home-prueba-3 (1).jpg" />
+        <img src="./images/inicio/home-prueba-3 (1).jpg" />
       </div>
 
 
@@ -150,8 +150,8 @@
         <h6 class="footer_text">
           Maza Brand Estudio de diseño y branding © 2022
         </h6>
-        <img src="./images/icons8-instagram.svg" class="icon-ig" />
-        <img src="./images/icons8-linkedin.svg" class="icon-lk" />
+        <img src="./images/inicio/icons8-instagram.svg" class="icon-ig" />
+        <img src="./images/inicio/icons8-linkedin.svg" class="icon-lk" />
       </div>
     </footer>
   </body>
