--- a/nosotros.html
+++ b/nosotros.html
@@ -45,5 +45,72 @@
               <i class="fa fa-bars"></i>
             </span>
           </nav>
+          <!-- Home - Principal -->
+          <main class="container_nt">
+            <div class="image_nosotros">
+              <img src="./images/nosotros/testing1.jpg">
+            </div>
+            <!-- Texto primario -->
+            <div class="text_encabezado_nt">
+              <h1 class="text_encabezado_nt1">
+                Somos expertos en diseñar y desarrollar experiencias en entornos digitales
+              </h1>
+            </div>
+            <!-- Texto secundario -->
+            <div class="text_encabezado_pap_nt">
+              <p class="text_encabezado_pap_nt1">
+                No vendemos humo, tampoco hacemos falsas promesas, solo sabemos hacer lo que más nos gusta: ¡Traducir que llevas en tu cabeza!
+              </p>
+            </div>
+            <!-- Discurso -->
+            <div class="discurso_nt">
+              <p class="text_disc1">Nos hemos juntado dos miembros de una familia para crear una agencia de diseño que combina la experiencia y la innovación. En Maza Brand nos gusta hacer proyectos a medida.
+              </p>
+              <p class="text_disc2">Diseñar y confeccionar lo que mejor le vaya al espíritu de tus ideas, da igual lo locas y atrevidas que sean nos da vida. Para nosotros diseñar es como sentirnos alineados con el propósito de servir a otros. </p>
+              <p class="text_disc3">Trabajamos al servicio de los proyectos, no nos casamos con fórmulas mágicas ni ideas sin contenido, por el contrario nos gustan las ideas profundas y positivas. 
+                Maza Brand es un homenaje familiar en el que rescatamos la perseverancia y la meticulosidad que hemos aprendido en casa desde pequeños. </p>
+              <p class="text_disc4">Somos Gerardo y Mateo, tío y sobrino, experiencia e innovación a favor de los sueños y el progreso colectivo. </p>
+
+            </div>
+            <!-- Equipo -->
+            <div class="equipo">
+              <h3 class="text_equipo">E Q U I P O</h3>
+              <div class="line_equipo"></div>
+            </div>
+            <!-- Lista de equipo -->
+            <div class="equipo_lista"> 
+              <div class="gerardo_diseñador">
+                <div class="imagen_diseñador">
+                  <img src="" alt="">
+                </div>
+                <div class="bio_diseñador">
+                  <h4>“Disfruto de imaginar que las ilusiones de los demás se hacen posible a través de mi talento y del trabajo en equipo que hemos logrado realizar a lo largo de los años”. </h4>
+                  <p>Gerardo Maza</p>
+                  <p>Diseñador </p>
+                </div>
+              </div>
+              <div class="mat_dev">
+                <div class="imagen_dev">
+                  <img src="" alt="">
+                </div>
+                <div class="bio_dev">
+                  <h5>“Me encanta construir ideas, hacer posible lo que está dibujado en papeles y lápices y ver que todo funciona al servicio de los demás”.</h5>
+                  <p>Mateo Maza </p>
+                  <p>Desarrollador</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- container segundario-->
+            <div class="container_img_empresa">
+              <div class="img_empresa_aa">
+                <img src="" alt="">
+            </div>
+            <div class="text_empresa"></div>
+            <div class="bt_empresa">
+              <button></button>
+            </div>
+
+          </main>
         </body>
 </html>
