--- a/nosotros.html
+++ b/nosotros.html
@@ -81,7 +81,7 @@
             <div class="equipo_lista"> 
               <div class="gerardo_diseñador">
                 <div class="imagen_diseñador">
-                  <img src="" alt="">
+                  <img src="./images/nosotros/test2.jpg" alt="">
                 </div>
                 <div class="bio_diseñador">
                   <h4>“Disfruto de imaginar que las ilusiones de los demás se hacen posible a través de mi talento y del trabajo en equipo que hemos logrado realizar a lo largo de los años”. </h4>
@@ -91,7 +91,7 @@
               </div>
               <div class="mat_dev">
                 <div class="imagen_dev">
-                  <img src="" alt="">
+                  <img src="./images/nosotros/test2.jpg" alt="">
                 </div>
                 <div class="bio_dev">
                   <h5>“Me encanta construir ideas, hacer posible lo que está dibujado en papeles y lápices y ver que todo funciona al servicio de los demás”.</h5>
