--- a/nosotros.html
+++ b/nosotros.html
@@ -84,9 +84,9 @@
                   <img src="./images/nosotros/test2.jpg" alt="">
                 </div>
                 <div class="bio_diseñador">
-                  <h4>“Disfruto de imaginar que las ilusiones de los demás se hacen posible a través de mi talento y del trabajo en equipo que hemos logrado realizar a lo largo de los años”. </h4>
-                  <p>Gerardo Maza</p>
-                  <p>Diseñador </p>
+                  <h4 class="bio_text_desing">“Disfruto de imaginar que las ilusiones de los demás se hacen posible a través de mi talento y del trabajo en equipo que hemos logrado realizar a lo largo de los años”. </h4>
+                  <p class="pp_desing">Gerardo Maza</p>
+                  <p class="pp_desing2">Diseñador </p>
                 </div>
               </div>
               <div class="mat_dev">
@@ -94,9 +94,9 @@
                   <img src="./images/nosotros/test2.jpg" alt="">
                 </div>
                 <div class="bio_dev">
-                  <h5>“Me encanta construir ideas, hacer posible lo que está dibujado en papeles y lápices y ver que todo funciona al servicio de los demás”.</h5>
-                  <p>Mateo Maza </p>
-                  <p>Desarrollador</p>
+                  <h5 class="bio_text_dev">“Me encanta construir ideas, hacer posible lo que está dibujado en papeles y lápices y ver que todo funciona al servicio de los demás”.</h5>
+                  <p class="mat_name">Mateo Maza </p>
+                  <p class="text_dev">Desarrollador</p>
                 </div>
               </div>
             </div>
@@ -110,7 +110,6 @@
             <div class="bt_empresa">
               <button></button>
             </div>
-
           </main>
         </body>
 </html>
