--- a/nosotros.html
+++ b/nosotros.html
@@ -106,7 +106,11 @@
               <div class="img_empresa_aa">
                 <img src="" alt="">
             </div>
-            <div class="text_empresa"></div>
+            <div class="text_empresa">
+              <p>Tu empresa, idea de negocio, proyecto o iniciativa necesita unos servicios óptimos.</p>
+            </div>
+            <div class="line__empresa">
+            </div>
             <div class="bt_empresa">
               <button></button>
             </div>
