--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <ul class="menu-items">
         <li><a href="index.html">Inicio</a></li>
         <li><a href="nosotros.html">Nosotros</a></li>
-        <li><a href="">Contacto</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
         <li><a href="servicios.html">Servicios</a></li>
         <li><a href="">Blog</a></li>
       </ul>
@@ -130,15 +130,6 @@
         <div class="blog-line"></div>
       </div>
 
-
-
-
-      <!-- Home - "Blog - Carrucel" -->
-      <div class="container_blog">
-      <div class="caja1_blog"></div>
-      <div class="caja2_blog"></div>
-      <div class="caja3_blog"></div>
-      </div>
     </main>
 
   
