--- a/nosotros.html
+++ b/nosotros.html
@@ -37,7 +37,7 @@
             <ul class="menu-items">
               <li><a href="index.html">Inicio</a></li>
               <li><a href="nosotros.html">Nosotros</a></li>
-              <li><a href="">Contacto</a></li>
+              <li><a href="contacto.html">Contacto</a></li>
               <li><a href="">Servicios</a></li>
               <li><a href="">Blog</a></li>
             </ul>
@@ -102,18 +102,36 @@
             </div>
 
             <!-- container segundario-->
-            <div class="container_img_empresa">
+            
               <div class="img_empresa_aa">
-                <img src="" alt="">
+                <img src="./images/nosotros/Landscape-Color.jpg" alt="">
             </div>
             <div class="text_empresa">
-              <p>Tu empresa, idea de negocio, proyecto o iniciativa necesita unos servicios óptimos.</p>
+              <p class="pp_text_empre">Tu empresa, idea de negocio, proyecto o iniciativa necesita unos servicios óptimos.</p>
             </div>
             <div class="line__empresa">
+              <img src="" alt="">
             </div>
             <div class="bt_empresa">
-              <button></button>
+              <img src="" alt="">
             </div>
+
+            <!-- container Blog-->
+            <div class="blog">
+              <h5 class="text_blog">CONOCE NUESTRO BLOG</h5>
+              <div class="blog-line"></div>
+            </div>
+            <!-- Footer -->
           </main>
+          <footer>
+            <div class="footer_all"></div>
+            <div class="container__footer_text">
+              <h6 class="footer_text">
+                Maza Brand Estudio de diseño y branding © 2022
+              </h6>
+              <img src="./images/inicio/icons8-instagram.svg" class="icon-ig" />
+              <img src="./images/inicio/icons8-linkedin.svg" class="icon-lk" />
+            </div>
+          </footer>
         </body>
 </html>
