--- a/contacto.html
+++ b/contacto.html
@@ -48,11 +48,23 @@
       </body>
       <!-- Path: Encabezado -->
       <div class="text_encabezado_1">
-        <h1 class="text">Hola texto1</h1>
-        <p class="pp_txt"></p>
+        <h1 class="text">Sabemos escuchar y nos gustan los retos</h1>
+        <p class="pp_txt">Te estábamos esperando, ¿hablamos? </p>
+        <p class="pp_text2">Puedes contactarnos como quieras: Por teléfono, correo, videoconferencia o a través del formulario. Nos encantan los retos, somos amantes de los detalles y damos lo mejor de nosotros en cada proyecto.</p>
       </div>
       <!-- Path: Datos-->
-      <div class="text_encabezado_2">
+      <div class="mapa_s">  
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3913.2137631050264!2d-74.19810218570966!3d11.245679553432824!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8ef4f56d1fa29025%3A0x9423d15241c49af5!2sCra.%2016d%20%2311-21!5e0!3m2!1ses!2sco!4v1654828922724!5m2!1ses!2sco" width="701" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="mapa"></iframe>
+      </div>
+      <div class="caja_">
+        <div class="caja"></div>
+      </div>
+      <div class="text_mapa">
+        <p class="pp_datos">maza brand</p>
+          <p class="pp_datos2">Carrera 16D #11-21 Urbanización Riascos Santa Marta - Colombia</p>
+          <p class="pp_datos3">(+57) 314 41 05 784</p>
+          <p class="pp_datos4">hola@mazabrand.com</p>
+          <p class="pp_datos5">Lunes a viernes De 8:00 a 17:00 hrs. </p>
       </div>
       <!-- Path: Formulario-->
       <div class="formulario">
