--- a/contacto.html
+++ b/contacto.html
@@ -54,8 +54,8 @@
       </div>
       <!-- Path: Datos-->
       <div class="mapa_s">  
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3913.2137631050264!2d-74.19810218570966!3d11.245679553432824!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8ef4f56d1fa29025%3A0x9423d15241c49af5!2sCra.%2016d%20%2311-21!5e0!3m2!1ses!2sco!4v1654828922724!5m2!1ses!2sco" width="701" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="mapa"></iframe>
-      </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3913.213834446919!2d-74.1981022!3d11.2456743!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8ef4f56d1fa29025%3A0x9423d15241c49af5!2sCra.%2016d%20%2311-21%2C%20Santa%20Marta%2C%20Magdalena!5e0!3m2!1ses!2sco!4v1654921052526!5m2!1ses!2sco" width="701" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="mapa"></iframe>
+            </div>
       <div class="caja_">
         <div class="caja"></div>
       </div>
