--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </p>
       </div>
       <div class="btn_container">
-        <input type="button" class="btn" value="Quiero saber mas" />
+        <a href=""> <img src="./images/accesorios/Ver el portafolio-rosa-chicle-06.svg" alt=""> </a>
       </div>
       <div class="container_images">
         <img src="./images/inicio/1x.jpg" />
@@ -74,7 +74,7 @@
         </p>
       </div>
       <div class="btn_container2">
-        <input type="button" class="btn2" value="Quiero saber mas" />
+        <a href=""> <img src="./images/accesorios/Quiero-saber-mas-amarillo.svg" alt="" class="btn2"> </a>
       </div>
       <div class="container_images2">
         <img src="images/inicio/home-prueba-2.jpg" />
@@ -117,7 +117,7 @@
         </p>
       </div>
       <div class="btn_container3">
-        <input type="button" class="btn_seccion3" value="Quiero saber mas" />
+        <a href=""> <img src="./images/accesorios/Quiero-saber-cyan.svg" alt="" class="btn4"> </a>
       </div>
       <div class="container_images_seccion3">
         <img src="./images/inicio/home-prueba-3 (1).jpg" />
@@ -142,8 +142,9 @@
         <h6 class="footer_text">
           Maza Brand Estudio de diseño y branding © 2022
         </h6>
-        <img src="./images/inicio/icons8-instagram.svg" class="icon-ig" />
-        <img src="./images/inicio/icons8-linkedin.svg" class="icon-lk" />
+        <img src="./images/accesorios/Siguenos.svg" alt="" class="siguenos">
+        <a href=""> <img src="./images/inicio/icons8-instagram.svg" alt="" class="icon-ig"> </a>
+        <a href=""> <img src="./images/inicio/icons8-linkedin.svg" alt="" class="icon-lk"> </a>
       </div>
     </footer>
   </body>
