--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
     <footer>
       <div class="footer_all"></div>
       <div class="container__footer_text">
-        <h6 class="footer_text">
+        <p class="footer_text">
           Maza Brand Estudio de diseño y branding © 2022
-        </h6>
+        </p>
         <img src="./images/accesorios/Siguenos.svg" alt="" class="siguenos">
         <a href=""> <img src="./images/inicio/icons8-instagram.svg" alt="" class="icon-ig"> </a>
         <a href=""> <img src="./images/inicio/icons8-linkedin.svg" alt="" class="icon-lk"> </a>
