--- a/index.html
+++ b/index.html
@@ -116,9 +116,6 @@
           Conecta tus apps, banco y empresa de transporte en un solo sitio.
         </p>
       </div>
-      <div class="btn_container3">
-        <a href=""> <img src="./images/accesorios/Quiero-saber-cyan.svg" alt="" class="btn4"> </a>
-      </div>
       <div class="container_images_seccion3">
         <img src="./images/inicio/home-prueba-3 (1).jpg" />
       </div>
@@ -128,7 +125,9 @@
       <!-- Home - "Encabezado" -->
       <div class="container_blog_encabezado">
         <h5 class="text_blog">CONOCE NUESTRO BLOG</h5>
-        <div class="blog-line"></div>
+        <div class="blog-line">
+          <img src="./images/accesorios/line.svg" alt="" class="line_">
+        </div>
       </div>
 
     </main>
