--- a/nosotros.html
+++ b/nosotros.html
@@ -75,7 +75,9 @@
             <!-- Equipo -->
             <div class="equipo">
               <h3 class="text_equipo">E Q U I P O</h3>
-              <div class="line_equipo"></div>
+              <div class="line_equipo">
+                <img src="./images/accesorios/line.svg" alt="" class="line_">
+              </div>
             </div>
             <!-- Lista de equipo -->
             <div class="equipo_lista"> 
@@ -110,27 +112,29 @@
               <p class="pp_text_empre">Tu empresa, idea de negocio, proyecto o iniciativa necesita unos servicios óptimos.</p>
             </div>
             <div class="line__empresa">
-              <img src="" alt="">
-            </div>
-            <div class="bt_empresa">
-              <img src="" alt="">
+              <img src="./images/accesorios/marco-degradado.svg" alt="">
+
             </div>
 
             <!-- container Blog-->
             <div class="blog">
               <h5 class="text_blog">CONOCE NUESTRO BLOG</h5>
-              <div class="blog-line"></div>
+              <div class="blog-line">
+                <img src="./images/accesorios/line.svg" alt="" class="line_">
+              </div>
             </div>
             <!-- Footer -->
           </main>
           <footer>
             <div class="footer_all"></div>
             <div class="container__footer_text">
-              <h6 class="footer_text">
+              <p class="footer_text">
                 Maza Brand Estudio de diseño y branding © 2022
-              </h6>
-              <img src="./images/inicio/icons8-instagram.svg" class="icon-ig" />
-              <img src="./images/inicio/icons8-linkedin.svg" class="icon-lk" />
+              </p>
+              <img src="./images/accesorios/Siguenos.svg" alt="" class="siguenos">
+              <a href=""><img src="./images/inicio/icons8-instagram.svg" class="icon-ig" /></a>
+              <a href=""><img src="./images/inicio/icons8-linkedin.svg" class="icon-lk" /></a>
+
             </div>
           </footer>
         </body>
