--- a/index.html
+++ b/index.html
@@ -107,18 +107,26 @@
       </div>
 
       <!-- Home - "Seccion 3" -->
-      <div class="container__text_seccion3">
-        <h4 class="text_one_session">
-          Automatiza tus procesos a golpe de un click, nosotros te guiamos
-        </h4>
-        <p class="text_pap_seccion3">
-          Mejora tu imagen y atiende mejor a tus clientes de forma virtual.
-          Conecta tus apps, banco y empresa de transporte en un solo sitio.
-        </p>
+      <div class="seccion3">
+        <div class="container__text_seccion3">
+          <h4 class="text_one_session">
+            Automatiza tus procesos a golpe de un click, nosotros te guiamos
+          </h4>
+          <p class="text_pap_seccion3">
+            Mejora tu imagen y atiende mejor a tus clientes de forma virtual.
+            Conecta tus apps, banco y empresa de transporte en un solo sitio.
+          </p>
+        </div>
+        <div class="container_images_seccion3">
+          <img src="./images/inicio/home-prueba-3 (1).jpg" />
+        </div>
+          <div class="btn_container3">
+            <a href=""> <img src="./images/accesorios/Ver el portafolio-rosa-chicle-06.svg" alt=""> </a>
+          </a>
+          </div>
       </div>
-      <div class="container_images_seccion3">
-        <img src="./images/inicio/home-prueba-3 (1).jpg" />
-      </div>
+ 
+ 
 
 
 
