--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <img src="./images/inicio/home-prueba-3 (1).jpg" />
         </div>
           <div class="btn_container3">
-            <a href=""> <img src="./images/accesorios/Ver el portafolio-rosa-chicle-06.svg" alt=""> </a>
+            <a href=""> <img src="./images/accesorios/Quiero-saber-cyan.svg" alt=""> </a>
           </a>
           </div>
       </div>
