--- a/contacto.html
+++ b/contacto.html
@@ -68,7 +68,22 @@
       </div>
       <!-- Path: Formulario-->
       <div class="formulario">
-
+        <div class="text_form">
+          <p class="pp_">¡ESCRÍBENOS!</p>
+          <div class="line"></div>
+          </div>
+        </div>
+        <div class="contact-content">
+          <form id="form" action="" class="form">
+            <input name="name" required type="text" id="name" placeholder="Nombre">
+            <input name="name" required type="text" id="empresa" placeholder="Empresa">
+            <input name="email" type="text" id="email" required placeholder="Email">
+            <input name="name" required type="text" id="telefono" placeholder="Telefono">
+            <textarea id="message" name="message" id="" cols="174" rows="6" placeholder="Mensajes"></textarea>
+            <button type="submit" class="btn-primary-full">Enviar</button>
+          </form>
+          <a href="mailto:hola@mazabrand.com" id="trucazo"></a>
+        </div>
       </div>
         </html>
 </html>
