--- a/contacto.html
+++ b/contacto.html
@@ -79,11 +79,23 @@
             <input name="name" required type="text" id="empresa" placeholder="Empresa">
             <input name="email" type="text" id="email" required placeholder="Email">
             <input name="name" required type="text" id="telefono" placeholder="Telefono">
-            <textarea id="message" name="message" id="" cols="174" rows="6" placeholder="Mensajes"></textarea>
+            <textarea id="message" name="message" id="" cols="148" rows="6" placeholder="Escríbe aquí tu consulta"></textarea>
             <button type="submit" class="btn-primary-full">Enviar</button>
           </form>
           <a href="mailto:hola@mazabrand.com" id="trucazo"></a>
         </div>
       </div>
+
+      <footer>
+        <div class="footer_all"></div>
+        <div class="container__footer_text">
+          <p class="footer_text">
+            Maza Brand Estudio de diseño y branding © 2022
+          </p>
+          <img src="./images/accesorios/Siguenos.svg" alt="" class="siguenos">
+          <a href=""> <img src="./images/inicio/icons8-instagram.svg" alt="" class="icon-ig"> </a>
+          <a href=""> <img src="./images/inicio/icons8-linkedin.svg" alt="" class="icon-lk"> </a>
+        </div>
+      </footer>
         </html>
 </html>
