--- a/contacto.html
+++ b/contacto.html
@@ -86,6 +86,10 @@
         </div>
       </div>
 
+      <div class="politicas">
+        <p class="enviaruwu">Al enviar estás aceptando nuestra</p>
+        <a href="" class="politicas_link">política de privacidad</a>
+      </div>
       <footer>
         <div class="footer_all"></div>
         <div class="container__footer_text">
