--- a/servicios.html
+++ b/servicios.html
@@ -46,6 +46,31 @@
               <i class="fa fa-bars"></i>
             </span>
           </nav>
+         <div class="encabezado">
+          <h1 class="text_encabezado">Somos expertos en diseñar y desarrollar experiencias en entornos digitales</h1>
+          <p class="pp_text_encabezado">El instinto, la pasión, el juego y la experimentación son nuestros ingredientes favoritos para encontrar en el camino las mejores posibilidades visuales y funcionales que nos permitan co-crear de la mano de nuestros clientes.
+          </p>
+          <p class="pp2_text_encabezado">Nuestro proceso creativo es muy juguetón, parte de la exploración y de la pasión de encontrar aquello que nos divierte más hacer y en el que tu te veas reflejado, nuestro proceso consta de tres pasos:
+          </p>
+         </div>
+
+         <div class="img_">
+          <img src="./images/accesorios/Fotos_luna_cuadradas.jpg" alt="" class="img1"> 
+          <strong class="text1">1. Experimentación</strong>
+          <p class="text_pp_dea1">Rayar, ensayar, borrar, volver a intentarlo…en Maza brand no nos gustan las fórmulas mágicas y por eso nos gusta dibujar fuera de la línea para encontrarnos las ideas más inesperadas </p>
+        </div>
+        
+        <div class="img_2">
+          <img src="./images/accesorios/Fotos_luna_cuadradas.jpg" alt="" class="img2"> 
+          <strong class="text2">2. Coherencia</strong>
+          <p class="text_pp_dea2">En el mundo del diseño el concepto y la funcionalidad son los dos pilares en los que se basa la excelencia de los proyectos, nosotros nos gusta captar la energía de tu proyecto y confeccionarle el mejor vestido a medida.</p>
+        </div>
+
+        <div class="img_3">
+          <img src="./images/accesorios/Fotos_luna_cuadradas.jpg" alt="" class="img3"> 
+          <strong class="text3">3. Proyección</strong>
+          <p class="text_pp_dea3">Nos gusta que los proyectos que diseñamos te ayuden a soñar, y a proyectarte con ellos en el futuro, es por ello que le damos todo el impulso que se nos ocurra para que despeguen al ritmo que tu elijas.</p>
+        </div>
       </body>
         </html>
 </html>
