--- a/servicios.html
+++ b/servicios.html
@@ -83,6 +83,16 @@
               <p>4. Diseño de guias de uso de marca</p>
             </div>
           </details>
+          <details class="detalles2">
+            <summary class="summay2">Comunicación</summary>
+            <div>
+              <p>Lo que más nos apasiona hacer es crear universos visuales coherentes a la esencia de tu marca. Diseñamos conceptos que vayan de la orma de tus ideas.</p>
+              <p>1. Creación de naming</p>
+              <p>2. Diagnóstico de marca</p>
+              <p>3. Diseño de marca gráfica</p>
+              <p>4. Diseño de guias de uso de marca</p>
+            </div>
+          </details>
         </div>
       </body>
         </html>
