--- a/servicios.html
+++ b/servicios.html
@@ -72,28 +72,32 @@
           <p class="text_pp_dea3">Nos gusta que los proyectos que diseñamos te ayuden a soñar, y a proyectarte con ellos en el futuro, es por ello que le damos todo el impulso que se nos ocurra para que despeguen al ritmo que tu elijas.</p>
         </div>
 
-        <div class="acordeon">
-          <details class="detalles">
-            <summary class="summay1">Branding</summary>
-            <div>
-              <p>Lo que más nos apasiona hacer es crear universos visuales coherentes a la esencia de tu marca. Diseñamos conceptos que vayan de la orma de tus ideas.</p>
-              <p>1. Creación de naming</p>
-              <p>2. Diagnóstico de marca</p>
-              <p>3. Diseño de marca gráfica</p>
-              <p>4. Diseño de guias de uso de marca</p>
-            </div>
-          </details>
-          <details class="detalles2">
-            <summary class="summay2">Comunicación</summary>
-            <div>
-              <p>Lo que más nos apasiona hacer es crear universos visuales coherentes a la esencia de tu marca. Diseñamos conceptos que vayan de la orma de tus ideas.</p>
-              <p>1. Creación de naming</p>
-              <p>2. Diagnóstico de marca</p>
-              <p>3. Diseño de marca gráfica</p>
-              <p>4. Diseño de guias de uso de marca</p>
-            </div>
-          </details>
-        </div>
+       <section>
+        <details>
+          <summary>Branding</summary>
+          <p>
+            Lorem ipsum dolor sit amet, eu alia suscipit mei. Reque iriure delectus vix id, ex sed forensibus suscipiantur. In eos exerci mollis apeirian, an qui latine alienum. Ad mea libris maluisset, consul assueverit sea ex.
+          </p>
+        </details>
+        <details>
+          <summary>Comunicación</summary>
+          <p>
+            Lorem ipsum dolor sit amet, eu alia suscipit mei. Reque iriure delectus vix id, ex sed forensibus suscipiantur. In eos exerci mollis apeirian, an qui latine alienum. Ad mea libris maluisset, consul assueverit sea ex.
+          </p>
+        </details>
+        <details>
+          <summary>Diseño de servicios </summary>
+          <p>Lorem ipsum dolor sit amet, eu alia suscipit mei. Reque iriure delectus vix id, ex sed forensibus suscipiantur. In eos exerci mollis apeirian, an qui latine alienum. Ad mea libris maluisset, consul assueverit sea ex. </p>
+        </details>
+        <details>
+          <summary>Accesoria en moda </summary>
+          <p>Lorem ipsum dolor sit amet, eu alia suscipit mei. Reque iriure delectus vix id, ex sed forensibus suscipiantur. In eos exerci mollis apeirian, an qui latine alienum. Ad mea libris maluisset, consul assueverit sea ex. </p>
+        </details>
+        <details>
+          <summary>Diseño web y entornos digitales </summary>
+          <p>Lorem ipsum dolor sit amet, eu alia suscipit mei. Reque iriure delectus vix id, ex sed forensibus suscipiantur. In eos exerci mollis apeirian, an qui latine alienum. Ad mea libris maluisset, consul assueverit sea ex. </p>
+        </details>
+       </section>
       </body>
         </html>
 </html>
