--- a/servicios.html
+++ b/servicios.html
@@ -76,7 +76,7 @@
         <details>
           <summary>Branding</summary>
           <p>
-            Lorem ipsum dolor sit amet, eu alia suscipit mei. Reque iriure delectus vix id, ex sed forensibus suscipiantur. In eos exerci mollis apeirian, an qui latine alienum. Ad mea libris maluisset, consul assueverit sea ex.
+            Lo que más nos apasiona hacer es crear universos visuales coherentes a la esencia de tu marca. Diseñamos conceptos que vayan de la orma de tus ideas. 
           </p>
         </details>
         <details>
@@ -87,8 +87,8 @@
         </details>
         <details>
           <summary>Diseño de servicios </summary>
-          <p>Lorem ipsum dolor sit amet, eu alia suscipit mei. Reque iriure delectus vix id, ex sed forensibus suscipiantur. In eos exerci mollis apeirian, an qui latine alienum. Ad mea libris maluisset, consul assueverit sea ex. </p>
-        </details>
+          <p>Consultoría en diseño de servicios, atención al cliente y logística</p>
+                </details>
         <details>
           <summary>Accesoria en moda </summary>
           <p>Lorem ipsum dolor sit amet, eu alia suscipit mei. Reque iriure delectus vix id, ex sed forensibus suscipiantur. In eos exerci mollis apeirian, an qui latine alienum. Ad mea libris maluisset, consul assueverit sea ex. </p>
