--- a/servicios.html
+++ b/servicios.html
@@ -82,7 +82,7 @@
         <details>
           <summary>Comunicación</summary>
           <p>
-            Lorem ipsum dolor sit amet, eu alia suscipit mei. Reque iriure delectus vix id, ex sed forensibus suscipiantur. In eos exerci mollis apeirian, an qui latine alienum. Ad mea libris maluisset, consul assueverit sea ex.
+            Pautas de comunicación para que tu marca sea sólida y puedas crear una estrategia publicitaria coherente en todos espacios en el que esté presente.
           </p>
         </details>
         <details>
@@ -91,11 +91,11 @@
                 </details>
         <details>
           <summary>Accesoria en moda </summary>
-          <p>Lorem ipsum dolor sit amet, eu alia suscipit mei. Reque iriure delectus vix id, ex sed forensibus suscipiantur. In eos exerci mollis apeirian, an qui latine alienum. Ad mea libris maluisset, consul assueverit sea ex. </p>
+          <p>Diseñamos para que tus ideas puedan convertirse en piezas tangibles.</p>
         </details>
         <details>
           <summary>Diseño web y entornos digitales </summary>
-          <p>Lorem ipsum dolor sit amet, eu alia suscipit mei. Reque iriure delectus vix id, ex sed forensibus suscipiantur. In eos exerci mollis apeirian, an qui latine alienum. Ad mea libris maluisset, consul assueverit sea ex. </p>
+          <p>Te ayudamos a transformar tus ideas y a proyectarlas en internet.</p>
         </details>
        </section>
       </body>
