--- a/servicios.html
+++ b/servicios.html
@@ -73,31 +73,63 @@
         </div>
 
        <section>
+        <strong class="text-ses">SERVICIOS</strong>
         <details>
           <summary>Branding</summary>
           <p>
             Lo que más nos apasiona hacer es crear universos visuales coherentes a la esencia de tu marca. Diseñamos conceptos que vayan de la orma de tus ideas. 
           </p>
+          <p>1. Creación de naming</p>
+          <p>2. Diagnóstico de marca</p>
+          <p>3. Diseño de marca gráfica</p>
+          <p>4. Diseño de guías de uso de marca</p>
         </details>
         <details>
           <summary>Comunicación</summary>
           <p>
             Pautas de comunicación para que tu marca sea sólida y puedas crear una estrategia publicitaria coherente en todos espacios en el que esté presente.
           </p>
+          <p>1. Estrategia de marca </p>
+          <p>2. Diseño de packs para piezas básicas publicitarias </p>
+          <p>3. Diseño de plantillas para redes sociales, blogs y webs.</p>
+          <p>4. Asesoramiento en tomas fotográficas para productos y servicios</p>
+          <p>5. Asesoría en edición de fotografías y vídeos.</p>
+
         </details>
         <details>
           <summary>Diseño de servicios </summary>
           <p>Consultoría en diseño de servicios, atención al cliente y logística</p>
-                </details>
+          </details>
         <details>
           <summary>Accesoria en moda </summary>
           <p>Diseñamos para que tus ideas puedan convertirse en piezas tangibles.</p>
+          <p>1. Diseño de prendas de vestir, accesorios y complementos</p>
+          <p>2. Asesoría y consultoría en diseño de colecciones </p>
+          <p>3. Ilustración de moda </p>
+          <p>4. Branding especializado en el sector de la moda.</p>
+
         </details>
         <details>
           <summary>Diseño web y entornos digitales </summary>
           <p>Te ayudamos a transformar tus ideas y a proyectarlas en internet.</p>
+           <p>1. Diseño web (Páginas corporativas y blogs)</p>
+           <p>2. E-commerce (Tiendas virtuales)</p>
+           <p>3. Prototipado web y wireframes</p>
+           <p>4. Edición de fotos  </p>
+           <p>5. Asesoría en copywriting (Redacción de textos)</p>
+           <p>6. Asesoría en posicionamiento web</p>
+
         </details>
        </section>
+
+
+       <!-- -->
+       <div class="sesscion3">
+        <img src="./images/nosotros/Landscape-Color.jpg" alt="" class="img_seccion3">
+        <img src="./images/accesorios/marco-degradado.svg" alt="" class="img__seccion3">
+        <p class="pp_sesscon3">Estaremos contentos de atender tus ideas, te invitamos a contactar con nosotros.</p>
+        <a href="" class="botn"><img src="./images/accesorios/Contactar-ahora-amarillo.svg" alt=""></a>
+       </div>
       </body>
         </html>
 </html>
